--- a/src/components/pages/WorkoutCreate/WorkoutCreateExerciseList/WorkoutCreateExerciseListItem/WorkoutCreateExerciseListItem.css
+++ b/src/components/pages/WorkoutCreate/WorkoutCreateExerciseList/WorkoutCreateExerciseListItem/WorkoutCreateExerciseListItem.css
@@ -1,6 +1,7 @@
 .WorkoutCreateExerciseListItem__wrapperItem {
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1) !important;
     border-radius: 4px !important;
+    margin-bottom: 10px !important;
 }
 
 .WorkoutCreateExerciseListItem {
@@ -14,8 +15,13 @@
     min-height: 40px !important;
 }
 
-.WorkoutCreateExerciseListItem .MuiAccordionSummary-content.Mui-expanded {
-    margin: 12px 0 !important;
+.WorkoutCreateExerciseListItem__wrapperItem .MuiAccordionSummary-content.Mui-expanded {
+    margin: 10px 0 !important;
+}
+
+.MuiAccordion-root.Mui-expanded {
+    margin: 0 !important;
+    margin-bottom: 10px !important;
 }
 
 .WorkoutCreateExerciseListItem__name {
